# Image-Anomaly

./: .gitignore  AutoEncoder.ipynb  C3_W1_Anomaly_Detection.ipynb  README.md  fit_and_evaluate.py  fit_evaluate.ae.py  fit_evaluate.py  fit_evaluate_ae.py  fit_evaluate_vae.py  pred_config.yaml  pyproject.toml  requirements.txt  train.py  train_Autoencoder.py  utils.py
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build.yml  ci.yml  docs.yml
.ipynb_checkpoints/: AutoEncoder-checkpoint.ipynb
anomalib/: infer.ipynb
anomalib/anomalib/models/dfkde/: config.yaml
anomalib/anomalib/pre_processing/: __init__.py
anomalib/configs/model/: dfkde.yaml
anomalib/requirements/: base.txt
ckpts/anamoly_road_512/lightning_logs/version_0/: hparams.yaml
ckpts/anamoly_road_512/lightning_logs/version_1/: hparams.yaml
data/: dataloader.py
docs/: ColorCalibration.md  ConventionalAnnotation.md  CucumberPhenotypes.md  Detection.md  ImageCalibration.md  ImageCapture.md  InteractiveAnnotation.md  Loc360.md  OrientationCorrection.md  PepperAPI.md  PepperPhenotypes.md  Process.md  Sagemaker.md  SupportedCrops.md  Validation.md  access.md  index.md
models/: autoencoder_mu_var.py  autoencoder_vgg.py  autoencoder_vgg_512.py  model_mean_var.py
notebooks/: AutoEncoder.ipynb  copydata.ipynb  defects.ipynb  kde.ipynb
utils/: callbacks.py  utils.py
vis_imgs/: Nonanamolies_dist.txt  anamolies_dist.txt
